--- a/literatur.bib
+++ b/literatur.bib
@@ -139,3 +139,39 @@ keywords = {.NET, Binary, Java, Serialization, XML}
 }
 
 @misc{Pommerenig_2019, title={Mythos oder Wahrheit: Allheilmittel XML: Public magazin}, url={https://www.msg.group/public-magazin-beitrag/mythos-oder-wahrheit-allheilmittel-xml?utm_source=chatgpt.com}, journal={Mythos oder WahrheIT: Allheilmittel XML}, author={Pommerenig, Tim}, year={2019}, month={Mar}} 
+
+@misc{ProgrammerAL_SerializationBenchmarks,
+  author = {ProgrammerAL},
+  title = {SerializationBenchmarks},
+  year = {2024},
+  howpublished = {\url{https://github.com/ProgrammerAl/SerializationBenchmarks}},
+  note = {Zugriff am 13. Dezember 2024}
+}
+
+@inproceedings{Hericko_2003,
+  author = {M. Hericko and M. B. Juric and I. Rozman and S. Beloglavec and A. Zivkovic},
+  title = {Object Serialization Analysis and Comparison in Java and .NET},
+  booktitle = {Proceedings of the 2nd International Conference on Principles and Practice of Programming in Java},
+  year = {2003},
+  pages = {44--54},
+  doi = {10.1145/944579.944589}
+}
+
+@article{Nate10_2024,
+  author = {Nate10},
+  title = {Performance Analysis of JSON, Buffer/Custom Binary Protocol, Protobuf, and MessagePack for Websockets},
+  journal = {DEV Community},
+  year = {2024},
+  month = {Oktober},
+  url = {https://dev.to/nate10/performance-analysis-of-json-buffer-custom-binary-protocol-protobuf-and-messagepack-for-websockets-2apn},
+  note = {Zugriff am 13. Dezember 2024}
+}
+
+@article{Viotti_2022,
+  author = {Juan Cruz Viotti and Mital Kinderkhedia},
+  title = {A Benchmark of JSON-compatible Binary Serialization Specifications},
+  journal = {arXiv preprint arXiv:2201.03051},
+  year = {2022},
+  url = {https://arxiv.org/abs/2201.03051},
+  note = {Zugriff am 13. Dezember 2024}
+}
