--- a/literatur.bib
+++ b/literatur.bib
@@ -175,3 +175,10 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   url = {https://arxiv.org/abs/2201.03051},
   note = {Zugriff am 13. Dezember 2024}
 }
+
+@book{berger2015introduction,
+  title={An introduction to Benford's law},
+  author={Berger, Arno and Hill, Theodore P},
+  year={2015},
+  publisher={Princeton University Press}
+}
