--- a/literatur.bib
+++ b/literatur.bib
@@ -175,3 +175,11 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   url = {https://arxiv.org/abs/2201.03051},
   note = {Zugriff am 13. Dezember 2024}
 }
+
+@misc{bebop_serialization,
+  author = {Betwixt Labs},
+  title = {Bebop Serialization Format},
+  year = {2024},
+  howpublished = {\url{https://github.com/betwixt-labs/bebop}},
+  note = {Zugriff am 13. Dezember 2024}
+}
