--- a/literatur.bib
+++ b/literatur.bib
@@ -182,3 +182,11 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   year={2015},
   publisher={Princeton University Press}
 }
+
+@misc{bebop_serialization,
+  author = {Betwixt Labs},
+  title = {Bebop Serialization Format},
+  year = {2024},
+  howpublished = {\url{https://github.com/betwixt-labs/bebop}},
+  note = {Zugriff am 13. Dezember 2024}
+}
